# forgemind

./: .gitignore  ATTRIBUTIONS.md  AUTOMATION_SCHEDULE.md  CHANGELOG.md  CONTRIBUTING_REVERSE_PATTERNS.md  FIRST_STEPS_TODAY.md  LAUNCH_KIT_v1.md  LAUNCH_TRACKING.md  README.md  RELEASE_NOTES.md  V1.1.0_COMPLETION_SUMMARY.md  V1.2.0_COMPLETION_SUMMARY.md  pyproject.toml
.github/workflows/: tests.yml
docs/: AGENT_PRESENTATION_GUIDE.md  AI_SYSTEM_TRANSPARENCY.md  COMPATIBILITY_MATRIX.md  FIRST_TIME_USER_GUIDE.md  SUPPORTED_DOMAINS.md  UPDATES_AND_SAFETY.md  V1.2.1_DELIVERY_MANIFEST.md  V1.2.1_ONBOARDING_FRAMEWORK.md  V1.2.1_ONBOARDING_IMPLEMENTATION.md  V1.2.1_UPDATE_SAFETY_SUMMARY.md
docs/governance/: FORGEMIND_AIIA.md  FORGEMIND_CAPABILITY_THRESHOLDS.md  FORGEMIND_CONSTITUTION.md  FORGEMIND_SKILL_CARD.md  SELF_AUDIT_REPORT.md
examples/: ai_agent_project.md  odoo_process_project.md  qms_sgc_project.md  software_feature_project.md  tender_analysis_project.md
forgemind/: __init__.py  cli.py  version.py
forgemind/cli/: __init__.py  main.py  version.py
forgemind/consultant/: __init__.py  followup.py  session.py  variant_output.py
forgemind/core/: __init__.py  analysis.py  classifier.py  intake.py  lean.py  rdmaicsi.py  senge.py  six_sigma.py
forgemind/data/: disciplines.yaml  doctrines.yaml
forgemind/disciplines/: __init__.py  taxonomy.py
forgemind/doctrines/: __init__.py  registry.py
forgemind/domains/: __init__.py  backlog_generator.py  risk_generator.py
forgemind/epistemics/: __init__.py  epistemic_validator.py
tests/: test_cli.py  test_cli_onboarding.py  test_constitutional_generators.py  test_consultant.py  test_core.py  test_disciplines.py  test_doctrines.py  test_followup.py  test_generators.py  test_history.py  test_privacy_leak_scan.py  test_reverse_patterns.py  test_self_audit.py  test_taxonomy_v13_expansion.py  test_variant_output.py  test_version_integration.py
(+38 files in other folders)
